--- a/SolutionForBuisnessFrontend/Components/_Imports.razor
+++ b/SolutionForBuisnessFrontend/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using SolutionForBuisnessFrontend
 @using SolutionForBuisnessFrontend.Components
+@using Blazored.Toast
+@using Blazored.Toast.Services
