--- a/SolutionForBuisnessFrontend/Components/Layout/MainLayout.razor
+++ b/SolutionForBuisnessFrontend/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
+﻿@using Blazored.Toast.Configuration
+@inherits LayoutComponentBase
 
 <div class="page">
     <div class="sidebar">
@@ -21,3 +22,5 @@
     <a href="." class="reload">Reload</a>
     <span class="dismiss">🗙</span>
 </div>
+
+<BlazoredToasts Position="ToastPosition.BottomLeft" Timeout="5"/>
